(env
  (dev
    (flags (:standard -warn-error -A))))


(executable
  (name		tls_ping_client)
  (public_name	tls_ping_client)
  (package	tlsping)
  (modules	tls_ping_client)
  (libraries	cmdliner hex socks socks-lwt tlsping)
)

(executable
  (name		tls_ping_server)
  (public_name	tls_ping_server)
  (package	tlsping)
  (modules	tls_ping_server)
  (libraries	cmdliner hex tlsping tls)
)


