opam-version: "2.0"
name:         "tlsping"
homepage:     "https://github.com/cfcs/tlsping"
dev-repo:     "git+https://github.com/cfcs/tlsping.git"
bug-reports:  "https://github.com/cfcs/tlsping/issues"
doc:          "https://cfcs.github.io/tlsping/doc"
author:       ["cfcs"]
maintainer:   ["cfcs"]
license:      "ISC"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "runtest"] {with-test}
]

depends: [
  "ocaml"     { >= "4.07.1" & build }
  "dune"      { >= "1.9.3" & build }

  "ipaddr" { >= "4.0.0" }
  "hex"
  "lwt" {>= "4.2.1"}
  "rresult"
  "tls" {>= "0.11.0"}
  "socks"
  "socks-lwt"

  "alcotest" {test}
]
